# rust-rgb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rustdoc.css  search-index.js
.github/workflows/: ci.yml
examples/: example.rs  serde.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/: trait.FromIterator.js
implementors/core/marker/: trait.Copy.js
implementors/core/ops/: trait.Add.js  trait.Mul.js  trait.Sub.js
implementors/core/ops/arith/: trait.Add.js  trait.Mul.js  trait.Sub.js
rgb/: ByteSlice.t.html  ComponentMap.t.html  FromSlice.t.html  RGB16.t.html  RGB8.t.html  RGBA16.t.html  RGBA8.t.html  index.html  sidebar-items.js  struct.RGB.html  struct.RGBA.html  trait.ByteSlice.html  trait.ComponentBytes.html  trait.ComponentMap.html  trait.FromSlice.html  type.RGB16.html  type.RGB8.html  type.RGBA16.html  type.RGBA8.html
rgb/internal/pixel/: ComponentBytes.t.html  trait.ByteSlice.html
src/: abgr.rs  alt.rs  argb.rs  as_bytes.rs  bgr.rs  bgra.rs  bytemuck.rs  bytemuck_impl.rs  bytemuck_traits.rs  core_traits.rs  from.rs  gray.rs  gray_alpha.rs  grb.rs  impls.rs  inherent_impls.rs  lib.rs  num_traits.rs  ops.rs  pixel.rs  rgb.rs  rgba.rs  tuples.rs  with_alpha.rs
src/formats/: abgr.rs  argb.rs  bgr.rs  bgra.rs  gray.rs  gray_a.rs  gray_a44.rs  gray_alpha.rs  gray_alpha44.rs  grb.rs  luma.rs  luma_a.rs  mod.rs  rgb.rs  rgba.rs  rgbw.rs
src/internal/: convert.rs  ops.rs  pixel.rs  rgb.rs  rgba.rs  tuple.rs
src/internal/convert/: array.rs  mod.rs  tuple.rs
src/legacy/: alt.rs  mod.rs
src/legacy/internal/: ops.rs  pixel.rs  rgb.rs  rgba.rs
src/legacy/internal/convert/: array.rs  mod.rs  tuple.rs
src/pixel/: arraylike.rs  as_slice.rs  contiguous_pixel.rs  gain_alpha.rs  gain_lose_alpha.rs  has_alpha.rs  het_pixel.rs  heterogeneous_pixel.rs  hom_pixel.rs  homogeneous_pixel.rs  mod.rs  pixel_component.rs
src/pixel_traits/: arraylike.rs  gain_alpha.rs  has_alpha.rs  het_pixel.rs  mod.rs  pixel.rs
src/rgb/: lib.rs.html
src/rgb/internal/: convert.rs.html  ops.rs.html  pixel.rs.html  rgb.rs.html  rgba.rs.html
src/rgb/src/: lib.rs.html
src/rgb/src/internal/: convert.rs.html  ops.rs.html  pixel.rs.html  rgb.rs.html  rgba.rs.html
tests/: v08.rs
