[package]
name = "rgb"
version = "0.9.0"
authors = [
	"Kornel Lesiński <kornel@geekhood.net>",
	"James Forster <james.forsterer@gmail.com>",
]
include = ["src/**/*", "Cargo.toml", "README.md", "examples/*.rs", "LICENSE"]
description = "`struct RGB/RGBA/etc.` for sharing pixels between crates + convenience methods for color manipulation.\nAllows no-copy high-level interoperability. Also adds common convenience methods and implements standard Rust traits to make `RGB`/`RGBA` pixels and slices first-class Rust objects."
documentation = "https://docs.rs/rgb"
repository = "https://github.com/kornelski/rust-rgb"
homepage = "https://lib.rs/crates/rgb"
readme = "README.md"
keywords = ["rgb", "rgba", "bgra", "pixel", "color"]
license = "MIT"
categories = ["graphics", "rust-patterns", "multimedia::images"]
edition = "2021"

[features]
default = []

# Implements some of the traits, see `rgb::num_traits` module for details.
num-traits = ["dep:num-traits"]
# support for the `defmt` crate
defmt-03 = ["dep:defmt"]
serde = ["dep:serde"]
bytemuck = ["dep:bytemuck"]

# Legacy features to be removed after `v0.10`
legacy = ["as-bytes"]
argb = []
grb = []
# Deprecated: use `num-traits` feature instead, and import `rgb::num_traits::*`
checked_fns = []
as-bytes = ["bytemuck"]

[badges]
travis-ci = { repository = "kornelski/rust-rgb" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0.200", optional = true, default-features = false, features = ["derive"] }
bytemuck = { version = "1.16", optional = true }
defmt = { version = "0.3.8", optional = true }
num-traits = { version = "0.2.19", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0.100"

[[example]]
name = "serde"
required-features = ["serde"]

[[example]]
name = "example"
required-features = []

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
features = ["argb", "serde"]
rustdoc-args = ["--generate-link-to-definition"]
